Fix hydra and maestro buttons style on mobile

--- a/src/sass/sections/_again-content.scss
+++ b/src/sass/sections/_again-content.scss
@@ -171,16 +171,21 @@
       }
 
       &__button-wrap {
+        width: 100%;
+
         &:hover {
           transition: .1s linear;
           filter: drop-shadow(0 0 10px rgba(134, 134, 134, 0.8));
+        }
+
+        @media screen and (min-width: 1280px) {
+          width: 320px;
         }
       }
 
       &__button {
         background: #292929;
         // border-radius: 48px;
-        width: 100%;
         height: 237px;
         padding: 25px 0;
         display: flex;
@@ -208,8 +213,10 @@
           }
         }
 
-        @media screen and (min-width: 1280px) {
-          width: 320px;
+        @media screen and (max-width: 768px) {
+          border-radius: 48px;
+          mask-image: none;
+          -webkit-mask-image: none;
         }
 
         img {
